--- a/public/index.html
+++ b/public/index.html
@@ -279,7 +279,7 @@ With Finwhizz you can hear the go and grow, as we...</p>
   <div class="container pt-8 pb-8 pb-md-12 pt-md-12">
     <div class="row justify-content-center">
       <div class="col-12 col-md-8 text-center text-white">
-        <h2>Our Difference</h2>
+        <h2>We are different</h2>
         <p><p>Since quality is entrenched in everything we do, it comes to us naturally. We are committed to deliver top notch services to our clients. We have strived to compete with ourselves, improve upon our standards and continued setting high standards for ourselves.</p>
 </p>
         <a class="button button-white" href="/about">About Us</a>
