--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
     <div class='header header-absolute'>
   <div class="container">
     <div class="logo">
-      <a href="http://finwhizz.in"><img alt="Figurit Homepage" src="http://finwhizz.inimages/logo.svg" /></a>
+      <a href="http://finwhizz.in"><img alt="Figurit Homepage" src="http://finwhizz.in/images/logo.svg" /></a>
     </div>
     <div class="logo-mobile">
-      <a href="http://finwhizz.in"><img alt="Figurit Homepage" src="http://finwhizz.inimages/logo-mobile.svg" /></a>
+      <a href="http://finwhizz.in"><img alt="Figurit Homepage" src="http://finwhizz.in/images/logo-mobile.svg" /></a>
     </div>
     <div id="main-menu" class="main-menu">
   <ul>
@@ -206,7 +206,7 @@ With Finwhizz you can hear the go and grow, as we...</p>
       <div class="service service-summary">
   
   <div class="service-image">
-    <img src="http://finwhizz.inservices/service-icon-4.png"/>
+    <img src="http://finwhizz.in/services/service-icon-4.png"/>
   </div>
   
   <div class="service-content">
@@ -222,7 +222,7 @@ With Finwhizz you can hear the go and grow, as we...</p>
       <div class="service service-summary">
   
   <div class="service-image">
-    <img src="http://finwhizz.inservices/service-icon-4.png"/>
+    <img src="http://finwhizz.in/services/service-icon-4.png"/>
   </div>
   
   <div class="service-content">
@@ -238,7 +238,7 @@ With Finwhizz you can hear the go and grow, as we...</p>
       <div class="service service-summary">
   
   <div class="service-image">
-    <img src="http://finwhizz.inservices/service-icon-4.png"/>
+    <img src="http://finwhizz.in/services/service-icon-4.png"/>
   </div>
   
   <div class="service-content">
@@ -292,7 +292,7 @@ With Finwhizz you can hear the go and grow, as we...</p>
           
           <ul class="footer-menu">
             <li><a href="http://finwhizz.in">Home</a></li>
-            <li><a href="http://finwhizz.incontact">Contact</a></li>
+            <li><a href="http://finwhizz.in/contact">Contact</a></li>
             <li class="copyright">© 2021 FinWhizz Consultancy</li>
           </ul>
         </div>
