--- a/public/index.html
+++ b/public/index.html
@@ -11,14 +11,14 @@
 <meta name="description" content="FinWhizz - One Stop Solution for all your Compliance" />
 <meta property="og:title" content="FinWhizz Consultancy" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://finwhizz.in" />
+<meta property="og:url" content="https://finwhizz.in/" />
 <meta property="og:image" content="" />
 <meta property="og:description" content="" />
 <meta name="twitter:card" content="" />
 <meta name="twitter:site" content="" />
 <meta name="twitter:creator" content="" />
 
-  <link rel="icon" href="http://finwhizz.infavicon.png">
+  <link rel="icon" href="http://finwhizz.in/favicon.png">
 
   
   
@@ -68,10 +68,10 @@
     <div class='header header-absolute'>
   <div class="container">
     <div class="logo">
-      <a href="http://finwhizz.in"><img alt="Figurit Homepage" src="http://finwhizz.inimages/logo.svg" /></a>
+      <a href="http://finwhizz.in/"><img alt="Figurit Homepage" src="http://finwhizz.in/images/logo.svg" /></a>
     </div>
     <div class="logo-mobile">
-      <a href="http://finwhizz.in"><img alt="Figurit Homepage" src="http://finwhizz.inimages/logo-mobile.svg" /></a>
+      <a href="http://finwhizz.in/"><img alt="Figurit Homepage" src="http://finwhizz.in/images/logo-mobile.svg" /></a>
     </div>
     <div id="main-menu" class="main-menu">
   <ul>
@@ -173,7 +173,7 @@
       <div class="service service-summary">
   
   <div class="service-image">
-    <img src="http://finwhizz.inservices/service-icon-4.png"/>
+    <img src="http://finwhizz.in/services/service-icon-4.png"/>
   </div>
   
   <div class="service-content">
@@ -189,7 +189,7 @@
       <div class="service service-summary">
   
   <div class="service-image">
-    <img src="http://finwhizz.inservices/service-icon-4.png"/>
+    <img src="http://finwhizz.in/services/service-icon-4.png"/>
   </div>
   
   <div class="service-content">
@@ -205,7 +205,7 @@
       <div class="service service-summary">
   
   <div class="service-image">
-    <img src="http://finwhizz.inservices/service-icon-4.png"/>
+    <img src="http://finwhizz.in/services/service-icon-4.png"/>
   </div>
   
   <div class="service-content">
@@ -222,7 +222,7 @@ With Finwhizz you can hear the go and grow, as we...</p>
       <div class="service service-summary">
   
   <div class="service-image">
-    <img src="http://finwhizz.inservices/service-icon-4.png"/>
+    <img src="http://finwhizz.in/services/service-icon-4.png"/>
   </div>
   
   <div class="service-content">
@@ -238,7 +238,7 @@ With Finwhizz you can hear the go and grow, as we...</p>
       <div class="service service-summary">
   
   <div class="service-image">
-    <img src="http://finwhizz.inservices/service-icon-4.png"/>
+    <img src="http://finwhizz.in/services/service-icon-4.png"/>
   </div>
   
   <div class="service-content">
@@ -254,7 +254,7 @@ With Finwhizz you can hear the go and grow, as we...</p>
       <div class="service service-summary">
   
   <div class="service-image">
-    <img src="http://finwhizz.inservices/service-icon-4.png"/>
+    <img src="http://finwhizz.in/services/service-icon-4.png"/>
   </div>
   
   <div class="service-content">
@@ -268,7 +268,7 @@ With Finwhizz you can hear the go and grow, as we...</p>
     </div>
     
     <div class="col-12 text-center">
-      <a class="button button-primary" href="http://finwhizz.inservices">View All Services</a>
+      <a class="button button-primary" href="http://finwhizz.in/services">View All Services</a>
     </div>
   </div>
 </div>
@@ -307,8 +307,8 @@ With Finwhizz you can hear the go and grow, as we...</p>
           </ul>
           
           <ul class="footer-menu">
-            <li><a href="http://finwhizz.in">Home</a></li>
-            <li><a href="http://finwhizz.incontact">Contact</a></li>
+            <li><a href="http://finwhizz.in/">Home</a></li>
+            <li><a href="http://finwhizz.in/contact">Contact</a></li>
             <li class="copyright">© 2021 FinWhizz Consultancy</li>
           </ul>
         </div>
