--- a/public/services/index.html
+++ b/public/services/index.html
@@ -7,7 +7,7 @@
   <title>Services - FinWhizz Consultancy</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
-  <link rel="icon" href="http://finwhizz.infavicon.png">
+  <link rel="icon" href="http://finwhizz.in/favicon.png">
 
   
   
@@ -57,10 +57,10 @@
     <div class='header header-absolute'>
   <div class="container">
     <div class="logo">
-      <a href="http://finwhizz.in"><img alt="Figurit Homepage" src="http://finwhizz.inimages/logo.svg" /></a>
+      <a href="http://finwhizz.in/"><img alt="Figurit Homepage" src="http://finwhizz.in/images/logo.svg" /></a>
     </div>
     <div class="logo-mobile">
-      <a href="http://finwhizz.in"><img alt="Figurit Homepage" src="http://finwhizz.inimages/logo-mobile.svg" /></a>
+      <a href="http://finwhizz.in/"><img alt="Figurit Homepage" src="http://finwhizz.in/images/logo-mobile.svg" /></a>
     </div>
     <div id="main-menu" class="main-menu">
   <ul>
@@ -125,7 +125,7 @@
     <div class="col-12 col-md-6 mb-2 "><div class="service service-summary">
   
   <div class="service-image">
-    <img src="http://finwhizz.inservices/service-icon-4.png"/>
+    <img src="http://finwhizz.in/services/service-icon-4.png"/>
   </div>
   
   <div class="service-content">
@@ -139,7 +139,7 @@
     <div class="col-12 col-md-6 mb-2 "><div class="service service-summary">
   
   <div class="service-image">
-    <img src="http://finwhizz.inservices/service-icon-4.png"/>
+    <img src="http://finwhizz.in/services/service-icon-4.png"/>
   </div>
   
   <div class="service-content">
@@ -153,7 +153,7 @@
     <div class="col-12 col-md-6 mb-2 "><div class="service service-summary">
   
   <div class="service-image">
-    <img src="http://finwhizz.inservices/service-icon-4.png"/>
+    <img src="http://finwhizz.in/services/service-icon-4.png"/>
   </div>
   
   <div class="service-content">
@@ -168,7 +168,7 @@ With Finwhizz you can hear the go and grow, as we...</p>
     <div class="col-12 col-md-6 mb-2 "><div class="service service-summary">
   
   <div class="service-image">
-    <img src="http://finwhizz.inservices/service-icon-4.png"/>
+    <img src="http://finwhizz.in/services/service-icon-4.png"/>
   </div>
   
   <div class="service-content">
@@ -182,7 +182,7 @@ With Finwhizz you can hear the go and grow, as we...</p>
     <div class="col-12 col-md-6 mb-2 "><div class="service service-summary">
   
   <div class="service-image">
-    <img src="http://finwhizz.inservices/service-icon-4.png"/>
+    <img src="http://finwhizz.in/services/service-icon-4.png"/>
   </div>
   
   <div class="service-content">
@@ -196,7 +196,7 @@ With Finwhizz you can hear the go and grow, as we...</p>
     <div class="col-12 col-md-6 mb-2 "><div class="service service-summary">
   
   <div class="service-image">
-    <img src="http://finwhizz.inservices/service-icon-4.png"/>
+    <img src="http://finwhizz.in/services/service-icon-4.png"/>
   </div>
   
   <div class="service-content">
@@ -211,7 +211,7 @@ With Finwhizz you can hear the go and grow, as we...</p>
     <div class="col-12 col-md-6 mb-2 "><div class="service service-summary">
   
   <div class="service-image">
-    <img src="http://finwhizz.inservices/service-icon-4.png"/>
+    <img src="http://finwhizz.in/services/service-icon-4.png"/>
   </div>
   
   <div class="service-content">
@@ -225,7 +225,7 @@ With Finwhizz you can hear the go and grow, as we...</p>
     <div class="col-12 col-md-6 mb-2 "><div class="service service-summary">
   
   <div class="service-image">
-    <img src="http://finwhizz.inservices/service-icon-4.png"/>
+    <img src="http://finwhizz.in/services/service-icon-4.png"/>
   </div>
   
   <div class="service-content">
@@ -239,7 +239,7 @@ With Finwhizz you can hear the go and grow, as we...</p>
     <div class="col-12 col-md-6 mb-2 "><div class="service service-summary">
   
   <div class="service-image">
-    <img src="http://finwhizz.inservices/service-icon-4.png"/>
+    <img src="http://finwhizz.in/services/service-icon-4.png"/>
   </div>
   
   <div class="service-content">
@@ -253,7 +253,7 @@ With Finwhizz you can hear the go and grow, as we...</p>
     <div class="col-12 col-md-6 mb-2 "><div class="service service-summary">
   
   <div class="service-image">
-    <img src="http://finwhizz.inservices/service-icon-4.png"/>
+    <img src="http://finwhizz.in/services/service-icon-4.png"/>
   </div>
   
   <div class="service-content">
@@ -267,7 +267,7 @@ With Finwhizz you can hear the go and grow, as we...</p>
     <div class="col-12 col-md-6 mb-2 "><div class="service service-summary">
   
   <div class="service-image">
-    <img src="http://finwhizz.inservices/service-icon-4.png"/>
+    <img src="http://finwhizz.in/services/service-icon-4.png"/>
   </div>
   
   <div class="service-content">
@@ -281,7 +281,7 @@ With Finwhizz you can hear the go and grow, as we...</p>
     <div class="col-12 col-md-6 mb-2 "><div class="service service-summary">
   
   <div class="service-image">
-    <img src="http://finwhizz.inservices/service-icon-4.png"/>
+    <img src="http://finwhizz.in/services/service-icon-4.png"/>
   </div>
   
   <div class="service-content">
@@ -312,8 +312,8 @@ With Finwhizz you can hear the go and grow, as we...</p>
           </ul>
           
           <ul class="footer-menu">
-            <li><a href="http://finwhizz.in">Home</a></li>
-            <li><a href="http://finwhizz.incontact">Contact</a></li>
+            <li><a href="http://finwhizz.in/">Home</a></li>
+            <li><a href="http://finwhizz.in/contact">Contact</a></li>
             <li class="copyright">© 2021 FinWhizz Consultancy</li>
           </ul>
         </div>
