--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
       <div class="service service-summary">
   
   <div class="service-image">
-    <img src="http://finwhizz.inservices/service-icon-4.png"/>
+    <img src="http://finwhizz.in/services/service-icon-4.png"/>
   </div>
   
   <div class="service-content">
@@ -173,7 +173,7 @@
       <div class="service service-summary">
   
   <div class="service-image">
-    <img src="http://finwhizz.inservices/service-icon-4.png"/>
+    <img src="http://finwhizz.in/services/service-icon-4.png"/>
   </div>
   
   <div class="service-content">
@@ -189,7 +189,7 @@
       <div class="service service-summary">
   
   <div class="service-image">
-    <img src="http://finwhizz.inservices/service-icon-4.png"/>
+    <img src="http://finwhizz.in/services/service-icon-4.png"/>
   </div>
   
   <div class="service-content">
@@ -252,7 +252,7 @@ With Finwhizz you can hear the go and grow, as we...</p>
     </div>
     
     <div class="col-12 text-center">
-      <a class="button button-primary" href="http://finwhizz.inservices">View All Services</a>
+      <a class="button button-primary" href="http://finwhizz.in/services">View All Services</a>
     </div>
   </div>
 </div>
