--- a/services/eca/index.html
+++ b/services/eca/index.html
@@ -7,7 +7,7 @@
   <title>Get a Personal eCA - FinWhizz Consultancy</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
-  <link rel="icon" href="http://finwhizz.infavicon.png">
+  <link rel="icon" href="http://finwhizz.in/favicon.png">
 
   
   
@@ -57,10 +57,10 @@
     <div class='header header-absolute'>
   <div class="container">
     <div class="logo">
-      <a href="http://finwhizz.in"><img alt="Figurit Homepage" src="http://finwhizz.inimages/logo.svg" /></a>
+      <a href="http://finwhizz.in/"><img alt="Figurit Homepage" src="http://finwhizz.in/images/logo.svg" /></a>
     </div>
     <div class="logo-mobile">
-      <a href="http://finwhizz.in"><img alt="Figurit Homepage" src="http://finwhizz.inimages/logo-mobile.svg" /></a>
+      <a href="http://finwhizz.in/"><img alt="Figurit Homepage" src="http://finwhizz.in/images/logo-mobile.svg" /></a>
     </div>
     <div id="main-menu" class="main-menu">
   <ul>
@@ -143,8 +143,8 @@
           </ul>
           
           <ul class="footer-menu">
-            <li><a href="http://finwhizz.in">Home</a></li>
-            <li><a href="http://finwhizz.incontact">Contact</a></li>
+            <li><a href="http://finwhizz.in/">Home</a></li>
+            <li><a href="http://finwhizz.in/contact">Contact</a></li>
             <li class="copyright">© 2021 FinWhizz Consultancy</li>
           </ul>
         </div>
