--- a/services/deeds/index.html
+++ b/services/deeds/index.html
@@ -105,7 +105,7 @@
 </div>
 
     
-<div id="hero" class="hero-image hero-image-setheight" style="background-image: url('/services/services11.jpg')">
+<div id="hero" class="hero-image hero-image-setheight" style="background-image: url('/services/deeds.jpg')">
   <div class="container ">
     <div class="hero-text">
       <span class="hero-section">services</span>
